FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include/)

ADD_EXECUTABLE(
    bridge_test
    test.c
)

SET(OPENCV_DYNAMIC_LIBS "${CMAKE_CURRENT_SOURCE_DIR}/")

SET(CMAKE_C_FLAGS " -std=gnu99 -g -O0 ") 

TARGET_LINK_LIBRARIES(
    bridge_test
    pthread
    ${GTEST_BOTH_LIBRARIES}
)

GTEST_DISCOVER_TESTS(bridge_test)
